# Qdrant-Local-RAG

./: .gitignore  LICENSE  pyproject.toml  readme.md  readme_CN.md  requirements.txt
backend/: build_or_get_vectorstore_qrant.py  chat.py  config.py  server.py
qdrant-web/: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
qdrant-web/src/: App.tsx  config.ts  types.ts
qdrant-web/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx
qdrant-web/src/components/files/: EmbeddingSection.tsx  FileList.tsx  FileManagementPanel.tsx
qdrant-web/src/hooks/: useChat.ts  useEmbedding.ts  useFiles.ts  useModels.ts
qdrant-web/src/pages/: ChatPage.tsx  HomePage.tsx  chat_v2.tsx
