[project]
name = "qdrant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-qdrant>=0.2.0",
    "pypdf>=6.0.0",
    "qdrant-client>=1.15.1",
    "tiktoken>=0.11.0",
]
